--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,5 +10,6 @@
 @import "section/suppliers";
 @import "section/customer";
 @import "section/design";
+@import "block/contacts";
 @import "block/yandexMap";
 @import "section/footer";
